--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
